# blockchain

./: .gitignore  .travis.yml  Makefile.am  README.md  backup-081220161729-pre-iopcore.tgz  configure.ac
.tx/: config
contrib/: IoP-qt.pro  IoPd.bash-completion  README.md
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: IoPd.bash-completion  IoPd.manpages  changelog  control  copyright  watch
contrib/debian/examples/: IoP.conf
contrib/debian/manpages/: IoP-qt.1  IoP.conf.5  IoPd.1
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-IoP.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize-hashes.py  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/rpm/: IoP.spec
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: spendfrom.py
contrib/verifysfbinaries/: verify.sh
contrib/zmq/: zmq_sub.py
doc/: README.md  README_windows.txt  REST-interface.md  build-msw.md  build-osx.md  build-unix.md  developer-notes.md  release-notes.md  release-process.md  tor.md  unit-tests.md
doc-pak/doc/: Doxyfile  assets-attribution.md  bootstrap.md  coding.md  gitian-building.md  release-notes.md  translation_process.md  zmq.md
doc-pak/doc/release-notes/: release-notes-0.11.0.md  release-notes-0.3.23.md  release-notes-0.5.2.md  release-notes-0.6.3.md  release-notes-0.8.2.md  release-notes-0.9.0.md
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.12.0.md  release-notes-0.3.22.md  release-notes-0.4.3.md  release-notes-0.7.1.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-IoPd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  importprunedfunds.py  listtransactions.py  rawtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh  zmq_test.py
qa/rpc-tests/python-IoPrpc/: setup.py
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: .cproject  .project  IoP-cli-res.rc  IoP-cli.cpp  IoPd-res.rc  IoPd.cpp  Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  base58.cpp  base58.h  bignum.h  bloom.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  checkpoints.h  clientversion.h  coins.h  compat.h  core.h  db.h  hash.h  init.cpp  init.h  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  miner.h  minerwhitelist.cpp  minerwhitelist.h  mruset.h  net.cpp  net.h  (+36 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: IoP_find_bdb48.m4  IoP_qt.m4
src/qt/: IoP.cpp  IoP.qrc  IoPaddressvalidator.cpp  IoPaddressvalidator.h  IoPamountfield.cpp  IoPamountfield.h  IoPgui.cpp  IoPgui.h  IoPstrings.cpp  IoPunits.cpp  IoPunits.h  Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  (+17 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: IoP_ach.ts  IoP_af_ZA.ts  IoP_ar.ts  IoP_be_BY.ts  IoP_bg.ts  IoP_bs.ts  IoP_ca.ts  IoP_ca@valencia.ts  IoP_ca_ES.ts  IoP_cmn.ts  IoP_cs.ts  IoP_cy.ts  IoP_da.ts  IoP_de.ts  IoP_el_GR.ts  IoP_en.ts  IoP_eo.ts  IoP_es.ts  IoP_es_CL.ts  IoP_es_DO.ts  IoP_es_MX.ts  IoP_es_UY.ts  IoP_et.ts  IoP_eu_ES.ts  IoP_fa.ts  IoP_fa_IR.ts  IoP_fi.ts  IoP_fr.ts  IoP_fr_CA.ts  IoP_gl.ts  IoP_gu_IN.ts  IoP_he.ts  IoP_hi_IN.ts  IoP_hr.ts  IoP_hu.ts  IoP_id_ID.ts  IoP_it.ts  IoP_ja.ts  IoP_ka.ts  IoP_kk_KZ.ts  (+31 more)
src/qt/res/: IoP-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/rpc/: server.cpp
src/test/: DoS_tests.cpp  Makefile.am  README.md  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_IoP.cpp  wallet_tests.cpp
src/test/data/: README.md  sighash.json  tx_invalid.json  tx_valid.json
src/wallet/: rpcdump.cpp
